--- a/lib/lang/template.json
+++ b/lib/lang/template.json
@@ -35,14 +35,173 @@
 
 	"The video you were looking for cannot be found.": "The video you were looking for cannot be found.",
 
-	"Sorry about that.": "Sorry about that.",
+	"You have no permissions to do this!": "You have no permissions to do this!",
+	"Cannot delete group: invalid group ID": "Cannot delete group: invalid group ID",
+	"This group cannot be deleted because it contains users": "This group cannot be deleted because it contains users",
+	"This group cannot be deleted because it has permissions attached and you may not edit permissions.": "This group cannot be deleted because it has permissions attached and you may not edit permissions.",
+	"Endless recursion detected, choose another parent for this group": "Endless recursion detected, choose another parent for this group",
+	"You must enter a name for the group.": "You must enter a name for the group.",
+	"Main": "Main",
+	"Edit groups": "Edit groups",
+	"New group": "New group",
+	"Group Settings": "Group Settings",
+	"Name": "Name",
+	"Parent group": "Parent group",
+	"Sort order": "Sort order",
+	"Visibility": "Visibility",
+	"Invisible": "Invisible",
+	"Visible": "Visible",
+	"Color": "Color",
+	"Apply changes": "Apply changes",
+	"Order": "Order",
+	"Edit perms": "Edit perms",
+	"Edit": "Edit",
+	"Delete": "Delete",
+
+	"Invalid {$type} ID.": "Invalid {$type} ID.",
+	"The %s permission has been successfully assigned!": "The %s permission has been successfully assigned!",
+	"You do not have the permissions to assign the %s permission!": "You do not have the permissions to assign the %s permission!",
+	"The %s permission has been successfully edited!": "The %s permission has been successfully edited!",
+	"You do not have the permissions to edit the %s permission!": "You do not have the permissions to edit the %s permission!",
+	"The %s permission has been successfully deleted!": "The %s permission has been successfully deleted!",
+	"You do not have the permissions to delete the %s permission!": "You do not have the permissions to delete the %s permission!",
+	"Edit permissions": "Edit permissions",
+	"for ID": "for ID",
+	"Apply": "Apply",
+	"Remove": "Remove",
+	"Add permission": "Add permission",
+	"Add": "Add",
+	"Permissions inherited from parent groups:": "Permissions inherited from parent groups:",
+	"Permissions overview for {$type} '%s'": "Permissions overview for {$type} '%s'",
+	"Grant": "Grant",
+	"Revoke": "Revoke",
+
+	"You can't edit a post in closed threads!": "You can't edit a post in closed threads!",
+	"You do not have permission to edit this post.": "You do not have permission to edit this post.",
+	"Invalid post ID.": "Invalid post ID.",
+	"Post doesn't exist.": "Post doesn't exist.",
+	"Submit": "Submit",
+	"No changes detected.": "No changes detected.",
+	"You do not have the permission to do this.": "You do not have the permission to do this.",
+	"Edit post": "Edit post",
+	"Preview": "Preview",
+	" (Preview)": " (Preview)",
+
+	"Forum does not exist.": "Forum does not exist.",
+	"New thread": "New thread",
+	"User does not exist.": "User does not exist.",
+	"Threads": "Threads",
+	"Latest threats": "Latest threats",
+
+	"Please enter a title for the category.": "Please enter a title for the category.",
+	"Please enter a title for the forum.": "Please enter a title for the forum.",
+	"Create": "Create",
+	"category": "category",
+	"Title:": "Title:",
+	"Display order:": "Display order:",
+	"Save category": "Save category",
+	"Delete category": "Delete category",
+	"Really delete this category?": "Really delete this category?",
+	"Back": "Back",
+	"forum": "forum",
+	"Description:": "Description:",
+	"HTML allowed.": "HTML allowed.",
+	"Category:": "Category:",
+	"Private forum": "Private forum",
+	"Read-only": "Read-only",
+	"Save forum": "Save forum",
+	"Delete forum": "Delete forum",
+	"Really delete this forum?": "Really delete this forum?",
+	"Categories": "Categories",
+	"New category": "New category",
+	"Forums": "Forums",
+	"New forum": "New forum",
+	"Forum management": "Forum management",
+	"Permissions": "Permissions",
+	"Inherit from parent": "Inherit from parent",
+
+	"Pages:": "Pages:",
+
+	"Thread does not exist.": "Thread does not exist.",
+	"You have no permissions to create posts in this forum!": "You have no permissions to create posts in this forum!",
+	"You can't post in closed threads.": "You can't post in closed threads.",
+	"You can't double post until it's been at least one day!": "You can't double post until it's been at least one day!",
+	"You must wait 2 seconds before posting consecutively.": "You must wait 2 seconds before posting consecutively.",
+	"Your post is empty! Enter a message and try again.": "Your post is empty! Enter a message and try again.",
+	"New reply": "New reply",
+
+	"You have no permissions to create threads in this forum!": "You have no permissions to create threads in this forum!",
+	"You need to enter a message to your thread.": "You need to enter a message to your thread.",
+	"Don't post threads so fast, wait a little longer.": "Don't post threads so fast, wait a little longer.",
+	"You must wait 2 seconds before posting a thread.": "You must wait 2 seconds before posting a thread.",
+
+	"You are not allowed to (un)delete that message.": "You are not allowed to (un)delete that message.",
+	"Private messages": "Private messages",
+	" (sent)": " (sent)",
+	"User doesn't exist.": "User doesn't exist.",
+	"View received": "View received",
+	"View sent": "View sent",
+	"Send new": "Send new",
+
+	"Search": "Search",
+	"Search for": "Search for",
+	"thread title": "thread title",
+	"post text": "post text",
+	"Please enter more than 2 characters!": "Please enter more than 2 characters!",
+	"Results": "Results",
+	"No posts found.": "No posts found.",
+	"Title": "Title",
+	"Started by": "Started by",
+	"Date": "Date",
+	" (Sticky)": " (Sticky)",
+	"No threads found.": "No threads found.",
+
+	"You can't send more than one PM within 30 seconds!": "You can't send more than one PM within 30 seconds!",
+	"That user doesn't exist!": "That user doesn't exist!",
+	"You can't send a blank message!": "You can't send a blank message!",
+	"Re:": "Re:",
+
+	"Private message does not exist.": "Private message does not exist.",
+	"(untitled)": "(untitled)",
+	"Reply": "Reply",
+
+	"Invalid page number": "Invalid page number",
+	"Thread post does not exist.": "Thread post does not exist.",
+	"Unknown action.": "Unknown action.",
+	"Posts by ": "Posts by ",
+	"Thread does not exist.<br><a href=./>Back to main</a>": "Thread does not exist.<br><a href=./>Back to main</a>",
+	"Unstick": "Unstick",
+	"Stick": "Stick",
+	"Open": "Open",
+	"Close": "Close",
+	"Trash": "Trash",
+	"Rename": "Rename",
+	"Move": "Move",
+	"Cancel": "Cancel",
+	"Move to:": "Move to:",
+	"Rename thread:": "Rename thread:",
+
+	"Link": "Link",
+	"rev.": "rev.",
+	"of": "of",
+	"by": "by",
+	"ID:": "ID:",
+	"Revision": "Revision",
+	"Posted on": "Posted on",
+	"Posts": "Posts",
+	"Since": "Since",
+	"Last post": "Last post",
+	"Last view": "Last view",
 
 	"This feature is not ready for production.": "This feature is not ready for production.",
 	"Access Denied": "Access Denied",
 
+	"%s follower%s": "%s follower%s",
+	"no": "no",
+	"%s view%s": "%s view%s",
+
 	"Latest videos": "Latest videos",
 	"(Page %s)": "(Page %s)",
-	"Categories": "Categories",
 	"All": "All",
 	"Miscellanous": "Miscellanous",
 	"Entertainment": "Entertainment",
@@ -56,9 +215,6 @@
 
 	"Welcome,": "Welcome,",
 	"s": "s",
-	"%s follower%s": "%s follower%s",
-	"no": "no",
-	"%s view%s": "%s view%s",
 	"Go to studio": "Go to studio",
 	"Welcome to squareBracket": "Welcome to squareBracket",
 	"I can't believe it's not PokTube": "I can't believe it's not PokTube",
@@ -70,7 +226,6 @@
 	"What's new?": "What's new?",
 	"Welcome to the brand new squareBracket! We've heard it, the old layout sucked so we have redesigned squareBracket to have a better user interface.": "Welcome to the brand new squareBracket! We've heard it, the old layout sucked so we have redesigned squareBracket to have a better user interface.",
 	"We have introduced many new features! Including:": "We have introduced many new features! Including:",
-	"Forums": "Forums",
 	"Music": "Music",
 
 	"Password successfully reset! Please login with your new password.": "Password successfully reset! Please login with your new password.",
@@ -121,7 +276,6 @@
 	"By uploading your music onto squareBracket, you acknowledge about the upload guidelines.": "By uploading your music onto squareBracket, you acknowledge about the upload guidelines.",
 	"Music info": "Music info",
 	"Enter the title of your music.": "Enter the title of your music.",
-	"Title": "Title",
 	"Music file": "Music file",
 	"Select the music file you want to upload.": "Select the music file you want to upload.",
 	"Upload Guidelines": "Upload Guidelines",
@@ -134,7 +288,6 @@
 	"Forum Threads": "Forum Threads",
 	"Forum Posts": "Forum Posts",
 	"Registered on": "Registered on",
-	"Last view": "Last view",
 	"Not implemented": "Not implemented",
 	"Edit profile": "Edit profile",
 	"Marked all notifications as read.": "Marked all notifications as read.",
@@ -160,10 +313,8 @@
 	"Edit video": "Edit video",
 	"Like": "Like",
 	"Published on %s": "Published on %s",
-	"Category:": "Category:",
 	"License:": "License:",
 	"Standard squareBracket License": "Standard squareBracket License",
-	"views": "views",
 	"Enter comment here, Markdown can be used here.": "Enter comment here, Markdown can be used here.",
 	"Please sign in in order to comment.": "Please sign in in order to comment.",
 	"Comment": "Comment",
@@ -172,12 +323,52 @@
 
 	"Search...": "Search...",
 	"Home": "Home",
-	"Browse": "Browse",
+	"Videos": "Videos",
 	"By the squareBracket contributors": "By the squareBracket contributors",
 	"Users registered": "Users registered",
 	"Videos uploaded": "Videos uploaded",
 	"Git Commit": "Git Commit",
 
-	"view%s": "view%s"
+	"view%s": "view%s",
 
+	"views": "views",
+
+	"Active users": "Active users",
+	"Active users during the last %s": "Active users during the last %s",
+	"Total": "Total",
+	"There are no active users in the given timespan.": "There are no active users in the given timespan.",
+
+	"Post preview": "Post preview",
+	"Edit Post": "Edit Post",
+	"Post:": "Post:",
+
+	"Latest Threads": "Latest Threads",
+	"By Threads": "By Threads",
+	"By Posts": "By Posts",
+	"Forum": "Forum",
+	"Replies": "Replies",
+	"Views": "Views",
+
+	"Memberlist": "Memberlist",
+	"Sort by:": "Sort by:",
+	"ID": "ID",
+	"Picture": "Picture",
+
+	"New Reply": "New Reply",
+
+	"Thread": "Thread",
+	"Thread title:": "Thread title:",
+
+	"Sent on": "Sent on",
+	"There are no private messages.": "There are no private messages.",
+
+	"(Message preview)": "(Message preview)",
+	"Send message": "Send message",
+	"Send to:": "Send to:",
+	"Message:": "Message:",
+
+	"Latest Posts": "Latest Posts",
+	"No posts were found.": "No posts were found.",
+	"Quick Reply": "Quick Reply"
+	"Reply:": "Reply:",
 }
