--- a/lib/lang/template.json
+++ b/lib/lang/template.json
@@ -10,13 +10,11 @@
 	"Incorrect username or password.": "Incorrect username or password.",
 
 	"Blank username.": "Blank username.",
-	"Blank email.": "Blank email.",
 	"Password is too short.": "Password is too short.",
 	"The passwords don't match.": "The passwords don't match.",
 	"Blank display name.": "Blank display name.",
 	"Username has already been taken. ": "Username has already been taken. ",
 	"Username contains invalid characters (Only alphanumeric and underscore allowed).": "Username contains invalid characters (Only alphanumeric and underscore allowed).",
-	"Email isn't valid.": "Email isn't valid.",
 	"Incorrect CAPTCHA. Please try again.": "Incorrect CAPTCHA. Please try again.",
 
 	"No reset data.": "No reset data.",
@@ -30,8 +28,7 @@
 	"Your video is already uploading or has been uploaded.": "Your video is already uploading or has been uploaded.",
 	"Please wait 2 minutes before uploading again. If you've already uploaded a video, it is being processed.": "Please wait 2 minutes before uploading again. If you've already uploaded a video, it is being processed.",
 
-	"Your music is already uploading or has been uploaded.": "Your music is already uploading or has been uploaded.",
-	"Please wait 2 minutes before uploading again. If you've already uploaded a music, it is being processed.": "Please wait 2 minutes before uploading again. If you've already uploaded a music, it is being processed.",
+	"The image/artwork you were looking for cannot be found.": "The image/artwork you were looking for cannot be found.",
 
 	"The video you were looking for cannot be found.": "The video you were looking for cannot be found.",
 
@@ -193,12 +190,18 @@
 	"Last post": "Last post",
 	"Last view": "Last view",
 
-	"This feature is not ready for production.": "This feature is not ready for production.",
-	"Access Denied": "Access Denied",
+	"Sign in": "Sign in",
+	"Upload": "Upload",
+	"Search...": "Search...",
+	"Home": "Home",
+	"Videos": "Videos",
+	"Music": "Music",
+	"By the squareBracket contributors": "By the squareBracket contributors",
+	"Users registered": "Users registered",
+	"Videos uploaded": "Videos uploaded",
+	"Git Commit": "Git Commit",
 
-	"%s follower%s": "%s follower%s",
-	"no": "no",
-	"%s view%s": "%s view%s",
+	"Access Denied": "Access Denied",
 
 	"Latest videos": "Latest videos",
 	"(Page %s)": "(Page %s)",
@@ -211,28 +214,30 @@
 	"Lifestyle": "Lifestyle",
 	"Science and Technology": "Science and Technology",
 	"Archive Dump": "Archive Dump",
-	"There are no videos of that category. You could create one!": "There are no videos of that category. You could create one!",
+	"There are no videos of that category.": "There are no videos of that category.",
+	"You could create one!": "You could create one!",
 
-	"Welcome,": "Welcome,",
+	"Welcome to cheeseRox,": "Welcome to cheeseRox,",
 	"s": "s",
-	"Go to studio": "Go to studio",
-	"Welcome to squareBracket": "Welcome to squareBracket",
-	"I can't believe it's not PokTube": "I can't believe it's not PokTube",
-	"Register": "Register",
+	"%s follower%s": "%s follower%s",
+	"no": "no",
+	"%s view%s": "%s view%s",
+	"Manage": "Manage",
+	"Welcome to cheeseRox": "Welcome to cheeseRox",
+	"Unbelivable, This is not PokTube.": "Unbelivable, This is not PokTube.",
+	"Get started": "Get started",
 	"Already have an account?": "Already have an account?",
-	"Sign in": "Sign in",
-	"Recently uploaded to squareBracket": "Recently uploaded to squareBracket",
+	"cheeseRox Videos": "cheeseRox Videos",
 	"No uploaded videos.": "No uploaded videos.",
 	"What's new?": "What's new?",
-	"Welcome to the brand new squareBracket! We've heard it, the old layout sucked so we have redesigned squareBracket to have a better user interface.": "Welcome to the brand new squareBracket! We've heard it, the old layout sucked so we have redesigned squareBracket to have a better user interface.",
-	"We have introduced many new features! Including:": "We have introduced many new features! Including:",
-	"Music": "Music",
+	"Welcome to the brand new cheeseRox! We've heard it, the old layout sucked, so we have redesigned cheeseRox to have a better user interface.": "Welcome to the brand new cheeseRox! We've heard it, the old layout sucked, so we have redesigned cheeseRox to have a better user interface.",
 
 	"Password successfully reset! Please login with your new password.": "Password successfully reset! Please login with your new password.",
 	"You have been successfully logged out of all devices.": "You have been successfully logged out of all devices.",
 	"Username": "Username",
 	"Password": "Password",
 
+	"Register": "Register",
 	"Display Name": "Display Name",
 	"Password (Again)": "Password (Again)",
 
@@ -241,66 +246,74 @@
 	"New Password:": "New Password:",
 	"Repeat New Password:": "Repeat New Password:",
 
+	"There are no videos that match your query.": "There are no videos that match your query.",
+	"cheeseRox isn't that big, y'know.": "cheeseRox isn't that big, y'know.",
+
 	"Settings": "Settings",
 	"Credentials": "Credentials",
-	"Email address": "Email address",
-	"Account migrated from PokTube": "Account migrated from PokTube",
 	"Change Password": "Change Password",
 	"Current Password (For verification)": "Current Password (For verification)",
 	"New Password": "New Password",
 	"Repeat new Password": "Repeat new Password",
 	"Customize your profile": "Customize your profile",
-	"Profile Picture": "Profile Picture",
-	"Custom color": "Custom color",
-	"About": "About",
+	"Profile picture": "Profile picture",
+	"Display name": "Display name",
+	"Description": "Description",
 	"Markdown allowed.": "Markdown allowed.",
 	"Forum signature": "Forum signature",
+	"Username color": "Username color",
+	"Background color": "Background color",
+	"Text color": "Text color",
+	"Title color": "Title color",
+	"Link color": "Link color",
+	"Header text color": "Header text color",
+	"Highlight header": "Highlight header",
+	"Highlight inside": "Highlight inside",
+	"Regular header": "Regular header",
+	"Regular inside": "Regular inside",
 	"Options": "Options",
 	"Language": "Language",
+	"sbNext Theme": "sbNext Theme",
 	"Save Changes": "Save Changes",
 
-	"Upload": "Upload",
 	"Upload video": "Upload video",
 	"Video info": "Video info",
 	"Enter the title and description of your video.": "Enter the title and description of your video.",
 	" Title": " Title",
 	" Description": " Description",
 	" Tags": " Tags",
+	" Video ID": " Video ID",
+	" Uploader ID": " Uploader ID",
 	"Video file": "Video file",
 	"Select the video file you want to upload.": "Select the video file you want to upload.",
 	"Upload guidelines": "Upload guidelines",
 	"Do not upload any TV shows, cartoons, music videos, music concerts, or commercials without permission unless they consist entirely of content that you've created yourself.": "Do not upload any TV shows, cartoons, music videos, music concerts, or commercials without permission unless they consist entirely of content that you've created yourself.",
 
+	"Upload image": "Upload image",
+	"Image info": "Image info",
+	"Image file": "Image file",
+	"Select the image file you want to upload.": "Select the image file you want to upload.",
+	"Do not upload any images/photos/artwork that you haven't created.": "Do not upload any images/photos/artwork that you haven't created.",
+
 	"Upload music": "Upload music",
-	"Important": "Important",
-	"By uploading your music onto squareBracket, you acknowledge about the upload guidelines.": "By uploading your music onto squareBracket, you acknowledge about the upload guidelines.",
-	"Music info": "Music info",
-	"Enter the title of your music.": "Enter the title of your music.",
-	"Music file": "Music file",
-	"Select the music file you want to upload.": "Select the music file you want to upload.",
-	"Upload Guidelines": "Upload Guidelines",
-	"Please, for god sakes, do not upload anything related to logos or cartoons meant for children. The viewer-base of those videos indirectly caused the downfall of the Gamerappa YouTube channel.": "Please, for god sakes, do not upload anything related to logos or cartoons meant for children. The viewer-base of those videos indirectly caused the downfall of the Gamerappa YouTube channel.",
-	"Upload anyways": "Upload anyways",
+	"Song info": "Song info",
+	"Song file": "Song file",
+	"Select the Music file you want to upload.": "Select the Music file you want to upload.",
+	"Do not upload any songs that you haven't created.": "Do not upload any songs that you haven't created.",
 
 	"Video": "Video",
+	"Images/Artwork": "Images/Artwork",
+	"Upload image/artwork": "Upload image/artwork",
+	"Text/Story": "Text/Story",
+	"Post text/story": "Post text/story",
 
-	"General information": "General information",
-	"Forum Threads": "Forum Threads",
-	"Forum Posts": "Forum Posts",
-	"Registered on": "Registered on",
-	"Not implemented": "Not implemented",
-	"Edit profile": "Edit profile",
-	"Marked all notifications as read.": "Marked all notifications as read.",
-	"Settings successfully saved!": "Settings successfully saved!",
-	"Welcome to your personal user page. Here, you can see and manage your uploaded content, customize your profile, and edit your settings.": "Welcome to your personal user page. Here, you can see and manage your uploaded content, customize your profile, and edit your settings.",
 	"Edit my settings": "Edit my settings",
 	"View my private messages": "View my private messages",
 	"View user page as viewer": "View user page as viewer",
-	"Log out": "Log out",
 	"Admin panel": "Admin panel",
-	"Notifications": "Notifications",
-	"No new notifications!": "No new notifications!",
-	"Mark all as read": "Mark all as read",
+	"Edit profile": "Edit profile",
+	"Marked all notifications as read.": "Marked all notifications as read.",
+	"Settings successfully saved!": "Settings successfully saved!",
 	"About this user": "About this user",
 	"View threads": "View threads",
 	"Show posts": "Show posts",
@@ -308,28 +321,32 @@
 	"Generate password reset for user": "Generate password reset for user",
 	"Edit forum permissions": "Edit forum permissions",
 	"There are currently no videos uploaded by %s.": "There are currently no videos uploaded by %s.",
+	"General information": "General information",
+	"Forum Threads": "Forum Threads",
+	"Forum Posts": "Forum Posts",
+	"Registered on": "Registered on",
 
-	"This video is being processed. Try again later.": "This video is being processed. Try again later.",
-	"Edit video": "Edit video",
-	"Like": "Like",
 	"Published on %s": "Published on %s",
-	"License:": "License:",
-	"Standard squareBracket License": "Standard squareBracket License",
-	"Enter comment here, Markdown can be used here.": "Enter comment here, Markdown can be used here.",
-	"Please sign in in order to comment.": "Please sign in in order to comment.",
-	"Comment": "Comment",
-	"Explore More Videos": "Explore More Videos",
-	"More videos from %s": "More videos from %s",
 
-	"Search...": "Search...",
-	"Home": "Home",
-	"Videos": "Videos",
-	"By the squareBracket contributors": "By the squareBracket contributors",
-	"Users registered": "Users registered",
-	"Videos uploaded": "Videos uploaded",
-	"Git Commit": "Git Commit",
+	"Like": "Like",
+	"License:": "License:",
+	"Standard cheeseRox License": "Standard cheeseRox License",
+	"Enter comment here.": "Enter comment here.",
+	"Comment": "Comment",
+	"More videos": "More videos",
+
+	"Sorry about that.": "Sorry about that.",
+
+	"Users": "Users",
+	"Log out": "Log out",
+	"Profile": "Profile",
+	"Studio": "Studio",
+	"Browse": "Browse",
+	"By the cheeseRox contributors": "By the cheeseRox contributors",
 
 	"view%s": "view%s",
+
+	"This video is being processed. Try again later.": "This video is being processed. Try again later.",
 
 	"views": "views",
 
@@ -369,6 +386,7 @@
 
 	"Latest Posts": "Latest Posts",
 	"No posts were found.": "No posts were found.",
-	"Quick Reply": "Quick Reply"
-	"Reply:": "Reply:",
+	"Quick Reply": "Quick Reply",
+	"Reply:": "Reply:"
+
 }
