fix abandonned french localization

--- a/lib/lang/fr-CA.json
+++ b/lib/lang/fr-CA.json
@@ -130,7 +130,7 @@
 	"View threads": "Afficher les discussion de forum",
 	"Show posts": "Afficher les messages",
 	"Send private message": "Envoyer un message privé",
-	"Generate password reset for user": "Générer la réinitialisation du mot de passe pour %s",
+	"Generate password reset for user": "Générer la réinitialisation du mot de passe",
 	"Edit forum permissions": "Modifier les permissions du forum",
 	"There are currently no videos uploaded by %s.": "Il n'y a pas de vidéos publié par %s.",
 	"This video is being processed. Try again later.": "Cette vidéo est en cours de traitement. Veuillez réessayer plus tard.",
